# airtable-utils

./: .gitignore  README.md  hk.pkl  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
schema/: README.md  airtable_schema_export.py
skills/airtable-schema/: SKILL.md
skills/airtable-schema-diff/: SKILL.md
skills/airtable-scripting/: SKILL.md
skills/airtable-standards-check/: SKILL.md
skills/airtable-user-scraping/: SKILL.md
tests/: conftest.py  test_bin_permissions.py  test_export_schema.py  test_schema_diff.py  test_standards_check.py
user_scraping/: README.md  airtable_user_scraper.py
